# iceape-uxp

./: CHANGELOG.md  app.mozbuild  configure.in  confvars.sh  moz.build
app/: Makefile.in  application.ini  blocklist.xml  nsSuiteApp.cpp  splash.rc
branding/iceape/: LICENSE  aboutIce.js  aboutIce.manifest  configure.sh  jar.mn  moz.build
browser/: browser-prefs.js  browser.js  jar.mn  moz.build  navigator.css  navigator.js  navigator.xul  navigatorOverlay.xul  nsBrowserStatusHandler.js  tabbrowser.xml  webDeveloperOverlay.js  webDeveloperOverlay.xul
browser/pageinfo/: pageInfo.js  security.js
common/: contentAreaContextOverlay.xul  jar.mn  moz.build  nsContextMenu.js  tasksOverlay.js  tasksOverlay.xul  utilityOverlay.js  utilityOverlay.xul  viewZoomOverlay.js
common/bindings/: notification.xml
common/bookmarks/: browser-places.js
common/cookies/: jar.mn
common/dataman/: dataman.js
common/history/: places.css
common/permissions/: cookieViewer.js  jar.mn
common/places/: nsPlacesAutoComplete.js
common/pref/: pref-content.js  pref-content.xul  pref-cookies.xul  pref-http.xul  pref-passwords.xul  pref-search.js  (+3 more)
debugQA/: install.rdf
installer/: Makefile.in  allowed-dupes.mn  package-manifest.in  removed-files.in
locales/: Makefile.in  jar.mn
mailnews/: folderDisplay.js  mail3PaneWindowCommands.js  mailCommands.js  mailWidgets.xml  mailWindow.js  mailWindowOverlay.js  mailWindowOverlay.xul  msgHdrViewOverlay.js  msgMail3PaneWindow.js  phishingDetector.js  tabmail.xml
modules/: PlacesUIUtils.jsm  Sanitizer.jsm  WindowsPreviewPerTab.jsm
(+111 files in other folders)
